@@ -6,6 +6,8 @@ JasperReports 0.6.6
 -----------------------------------
 - new "incrementType" and "incrementGroup" attributes for variables;
 
+- new Groovy report compiler;
+
 - minor bug fixes and improvements;
 
 
